Update maven plugins