@@ -57,12 +57,28 @@
                 <version>3.1.1</version>
                 <executions>
                     <execution>
-                        <id>java</id>
+                        <id>java-agent</id>
                         <goals>
-                            <goal>java</goal>
+                            <goal>exec</goal>
                         </goals>
                         <configuration>
-                            <mainClass>${mainClass}</mainClass>
+                            <executable>java</executable>
+                            <workingDirectory>${project.build.directory}</workingDirectory>
+                            <arguments>
+                                <argument>-classpath</argument>
+                                <classpath/>
+                                <argument>${mainClass}</argument>
+                            </arguments>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>native</id>
+                        <goals>
+                            <goal>exec</goal>
+                        </goals>
+                        <configuration>
+                            <executable>${project.build.directory}/${imageName}</executable>
+                            <workingDirectory>${project.build.directory}</workingDirectory>
                         </configuration>
                     </execution>
                 </executions>
@@ -173,7 +189,7 @@
                             <execution>
                                 <id>build-native</id>
                                 <goals>
-                                    <goal>compile-no-fork</goal>
+                                    <goal>build</goal>
                                 </goals>
                                 <phase>package</phase>
                             </execution>
@@ -186,13 +202,21 @@
                             </execution>
                         </executions>
                         <configuration>
+                            <fallback>false</fallback>
                             <buildArgs>
-                                <buildArg>-H:IncludeResources=".*/reference.*conf$ -H:Log=registerResource:3 --enable-preview</buildArg>
+                                <arg>-H:DashboardDump=fortune -H:+DashboardAll</arg>
                             </buildArgs>
+                            <agent>
+                                <enabled>true</enabled>
+                                <options>
+                                    <option>experimental-class-loader-support</option>
+                                </options>
+                            </agent>
                         </configuration>
                     </plugin>
                 </plugins>
             </build>
         </profile>
     </profiles>
+
 </project>
